# claude_mes

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml  tsconfig.json
.claude/: ARCHITECTURE.md  settings.local.json
.claude/agent-memory/: plan.md  v5-migration-plan.md
.claude/agents/: code-reviewer.md  dev-deployer.md  notifier.md  orchestrator.md  planner.md  quality-guard.md  task-tracker.md
.claude/docs/: QUALITY_SCORE.md  SECURITY.md  TROUBLESHOOTING.md  tech-debt-tracker.md
.claude/docs/design-docs/: core-beliefs.md  index.md
.claude/docs/exec-plans/: README.md
.claude/docs/references/: README.md  domain-constants-ref.md  erp-if-spec.md
.claude/rules/: backup.md  controller.md  core.md  data-lifecycle.md  domain.md  erp.md  exception.md  frontend.md  middleware.md  migration.md  model.md  permission.md  personalization.md  repository.md  schema.md  service.md  test.md
apps/api/: package.json  tsconfig.json
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
apps/web/src/: App.tsx  main.tsx
etc_doc/: GarmentOS_CRUD_Matrix.xlsx  GarmentOS_ERD_v4.html  GarmentOS_IntegratedPlan_v5.html  GarmentOS_PDC_Viewer.html  GarmentOS_PDC_WSD.docx  MES_DevPlan_Part1.docx  MES_DevPlan_Part2.docx  MES_DevPlan_Part3.docx  MIGRATION_PLAN_V5.md  garment_mes_dev_plan.html
frontend/src/services/: api.ts  (+1 more)
notes/: decisions.md  defer.md  handoff.md
scripts/: domain-validate.sh
src/yic_mes/: __main__.py  app.py
tests/: conftest.py  test_smoke.py
tests/test_controllers/: test_production_order.py
(+124 files in other folders)
